Change in the strucure of damage function

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ __pycache__
 docs/make.bat
 docs/Makefile
 plots
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/cachedir
