--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ docs/make.bat
 docs/Makefile
 plots
 /c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/cachedir
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/plots_paper
