--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ __pycache__
 docs/make.bat
 docs/Makefile
 plots
-/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/cachedir
-/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/plots_paper
+cachedir
+plots_paper
