--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Untitled-1.ipynb
 Untitled-1.py
 Untitled-2.ipynb
 brouillion.ipynb
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/data.py
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/simulateur.ipynb
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/simulateur.ipynb
