--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ simulateur.ipynb
 simulateur.ipynb
 Untitled-1.py
 Untitled-1.ipynb
-/simulateur.ipynb
 simulateur.ipynb
-
+Untitled-1.ipynb
+Untitled-2.ipynb
+usage.ipynb
+plot_function.py
+jacobian.ipynb
+data.py
+brouillion.ipynb
+all_plot_possible.ipynb
