--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ all_plot_possible.ipynb
 notebook
 models/ENV_Growth_model
 misc
+/c:/Users/Anthony Couthures/OneDrive - Universite de Lorraine/CO2/Simulation/CO2-Game/CO2-Game/models/ENV_Growth_model
