--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,21 @@ sample.npy
 data/CMIP6.ipynb
 data/SSP_CMIP6_201811.csv
 test/joblib/
-**/__pycache__/
+**/__pycache__
+***/__pycache__/
+
 latex.py
 test.ipynb
 figure.py
+pareto.ipynb
+control.ipynb
+efficiency/
+test_plot
+figure.toc
+figure.out
+noise.pdf
+noise.html
+noise.py
+tospy.py
+noisev2.html
+system.ipynb
